k8s-3tier-architecture/05-application/fastapi-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: xorud1/shop-api:1.0
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: fastapi-storage
              mountPath: /app/uploads
      volumes:
        - name: fastapi-storage
          persistentVolumeClaim:
            claimName: pvc-fastapi
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
  namespace: fastapi
spec:
  selector:
    app: fastapi
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
