k8s-3tier-architecture/05-application/redis-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command:
            [
              "redis-server",
              "--appendonly",
              "yes",
              "--maxmemory",
              "256mb",
              "--maxmemory-policy",
              "allkeys-lru",
            ]
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: fastapi
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
