k8s-3tier-architecture/05-application/ingress-fastapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: fastapi
spec:
  ingressClassName: nginx
  rules:
    - host: api.1st-project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-svc
                port:
                  number: 8000
